# stg-input

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md
include/: AxisState.h  GamepadState.h  MouseState.h
include/STGInput/: ButtonState.h  Convenience.h  KeyboardState.h  STGInput.h
src/: AxisState.c  AxisState.h  ButtonState.c  ButtonState.h  GamepadState.c  GamepadState.h  KeyboardState.c  KeyboardState.h  MouseState.c  MouseState.h  STGInput.c  STGInput.h  main.c  test.c
src/STGInput/: ButtonState.c  ButtonState.h  Convenience.c  Convenience.h  GamepadState.c  GamepadState.h  KeyboardState.c  KeyboardState.h  MouseState.c  MouseState.h  STGInput.c
